@@ -366,6 +366,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1349274: gettext.install() now optionally installs additional
+  translation functions other than _() in the builtin namespace.
+
 - Patch #1337756: fileinput now accepts Unicode filenames.
 
 - Patch #1373643: The chunk module can now read chunks larger than
